# zk-snark-matrix-sdk

./: .rgignore  CLA.md  Cargo.toml  LICENSE  LICENSE-MIT  MSC0000-zk-proven-room-joins.md  Makefile  README.md  main.rs
.github/workflows/: ci.yml
demo/: index.html
demo-unoptimized-guest/: Cargo.toml
demo-unoptimized-guest/src/: lib.rs
docs/: GUEST_BUILDS.md  architectural-paths.md  deployment-guides.md  vuln-001-LambdaClass.txt
ruma-zk/: Cargo.toml
ruma-zk-prover/: Cargo.toml
ruma-zk-prover/src/: lib.rs
ruma-zk-topair/: Cargo.toml
ruma-zk-topair/src/: main.rs
ruma-zk-topological-air/: Cargo.toml
ruma-zk-wasm/: Cargo.toml
ruma-zk/guest/: Cargo.toml
ruma-zk/guest/src/: lib.rs
ruma-zk/src/: main.rs
ruma_zk_witness/: Cargo.toml  linker.ld
ruma_zk_witness/src/: lib.rs  main.rs
scripts/: fetch_matrix_state.py  generate_massive_data.py  http_wrapper.py  visualize_benchmarks.wls
src/: lib.rs  main.rs
src/guest/: Cargo.toml  main.rs
src/guest-unoptimized/: Cargo.toml  main.rs
src/host/: Cargo.toml  build.rs  debug_jolt.rs  main.rs
src/wasm-client/: Cargo.toml
src/wasm-client/src/: lib.rs
