[package]
name = "ruma-zk"
version = "0.1.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "High-level API for generating and verifying Matrix State Resolution proofs using Jolt zkVM."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"

[[bin]]
name = "ruma-zk"
path = "main.rs"

[dependencies]
jolt-sdk = { version = "0.1.0", git = "https://github.com/a16z/jolt.git", features = ["host"] }
clap = { version = "4.4", features = ["derive"] }
ruma_zk_guest = { version = "0.1.0", path = "./ruma_zk_guest", features = ["host"] }
ruma_zk_guest_unoptimized = { version = "0.1.0", path = "./demo_unoptimized_guest", features = ["host"] }
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.120"
sha2 = "0.10.8"
hex = "0.4"
ciborium = "0.2.2"
bincode = "1.3"
ruma-lean = "0.1.0"
rayon = "1.8"
ed25519-consensus = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"

[workspace]
resolver = "2"
members = ["ruma_zk_guest", "demo_unoptimized_guest", "ruma-zk-wasm"]

[patch.crates-io]
hex = { git = "https://github.com/KokaKiwi/rust-hex", branch = "main" }
base64 = { git = "https://github.com/marshallpierce/rust-base64", tag = "v0.21.7" }
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-poly = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
