[package]
name = "ruma-zk"
version = "0.1.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "High-level API for generating and verifying Matrix State Resolution proofs using Jolt zkVM."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"


[dependencies]
jolt-sdk = { version = "0.1.0", git = "https://github.com/a16z/jolt.git", features = ["host"] }
ruma_zk_witness = { path = "./ruma_zk_witness", default-features = false }
serde = { version = "=1.0.210", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.120", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
ciborium = "0.2.2"
bincode = "1.3"
hashbrown = { version = "=0.14.5", default-features = false, features = ["ahash", "inline-more", "serde"] }
ruma-lean = { path = "../ruma-lean", features = ["cli"] }
rayon = "1.8"
ed25519-consensus = "2.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = { version = "=0.21.7", default-features = false }

[workspace]
resolver = "2"
members = [
    "ruma_zk_witness",
    "ruma-zk-wasm",
]

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-poly = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
