[package]
name = "ruma-zk-topair"
version = "0.1.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Topological AIR coprocessor for Matrix State Resolution using Plonky3."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"

[dependencies]
p3-baby-bear = "0.5.2"
p3-challenger = "0.5.2"
p3-commit = "0.5.2"
# Plonky3 primitives
p3-field = "0.5.2"
p3-keccak = "0.5.2"
p3-matrix = "0.5.2"
p3-merkle-tree = "0.5.2"
p3-symmetric = "0.5.2"

# High-performance hashing and processing
ahash = "0.8"
bincode = "1.3"
hex = "0.4"
rand = "0.8"
rayon = "1.8"
ruma-lean = { path = "../../ruma-lean", version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
