[package]
name = "ruma-zk-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "WebAssembly client for verifying ZK-Matrix-Join proofs trustlessly in the browser."
repository = "https://github.com/gamesguru/ruma-zk"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-time = "1.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-test = "0.3.42"
