[package]
name = "ruma-zk"
version = "0.1.1"
edition = "2021"
authors = ["Shane Jaroch <chown_tee@proton.me>"]
description = "Matrix State Resolution proofs using ZK frameworks."
license = "MIT OR Apache-2.0"
repository = "https://github.com/gamesguru/ruma-zk"

[dependencies]
ruma-zk-topair = { package = "ruma-zk-topair", path = "../ruma-zk-topair", version = "0.1.0" }
serde = { version = "=1.0.210", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.120", default-features = false, features = ["alloc"] }
sha2 = "0.10.8"
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
ciborium = "0.2.2"
bincode = "1.3"
hashbrown = { version = "=0.14.5", default-features = false, features = ["ahash", "inline-more", "serde"] }
ruma-lean = { path = "../../ruma-lean", version = "0.1.1", features = ["cli"] }
rayon = "1.8"
ed25519-consensus = "2.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = { version = "=0.21.7", default-features = false }
