[package]
name = "ruma_zk_witness"
version = "0.1.0"
edition = "2021"

[dependencies]
ruma-lean = { path = "../../ruma-lean", default-features = false, features = ["alloc"] }
serde = { version = "=1.0.210", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.120", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
ciborium = { version = "0.2.2", default-features = false }
hex = { version = "=0.4.3", default-features = false, features = ["alloc"] }
base64 = { version = "=0.21.7", default-features = false, features = ["alloc"] }
jolt = { package = "jolt-sdk", version = "0.1.0", git = "https://github.com/a16z/jolt.git", default-features = false, features = ["guest-nostd"] }

[features]
guest = []
host = ["jolt/host"]
