[package]
name = "ruma-zk-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
ruma-lean = { version = "0.1.0", git = "https://github.com/gamesguru/ruma-lean.git", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc"] }
sha2 = "0.10.8"
ciborium = "0.2.2"
jolt = { package = "jolt-sdk", version = "0.1.0", git = "https://github.com/a16z/jolt.git" }

[features]
guest = []
