[package]
name = "ruma-zk-guest-unoptimized"
version = "0.1.0"
edition = "2021"

[dependencies]
ruma-lean = { git = "https://github.com/gamesguru/ruma-lean.git", default-features = false, features = ["alloc", "zkvm"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc"] }
sha2 = "0.10.8"
ciborium = "0.2.2"
hashbrown = "0.14"
jolt-sdk = { git = "https://github.com/a16z/jolt.git", features = ["guest-std", "host"] }
