[package]
name = "zk-matrix-join-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-guest"
path = "main.rs"
test = false

[dependencies]
sp1-zkvm = "6.0.2"
ruma-state-res = "0.15.0"
ruma-events = "0.32.1"
ruma-common = { version = "0.17.1", features = ["canonical-json"] }
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = { version = "1.0", features = ["alloc"] }
sha2 = "0.11.0"
ciborium = "0.2.2"
