[package]
name = "zk-matrix-join-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-host"
path = "main.rs"

[dependencies]
sp1-sdk = { version = "6.0.2", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
ruma-events = "0.32.1"
ruma-common = { version = "0.17.1", features = ["canonical-json"] }
ruma-state-res = "0.15.0"
hex = "0.4"
ciborium = "0.2.2"
sp1-verifier = "6.0.2"

[build-dependencies]
sp1-build = "6.0.2"
