[package]
name = "zk-matrix-join-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-matrix-join-host"
path = "main.rs"

[[bin]]
name = "debug-jolt"
path = "debug_jolt.rs"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt.git", features = ["host"] }
clap = { version = "4.4", features = ["derive"] }
zk-matrix-join-guest = { path = "../guest" }
zk-matrix-join-guest-unoptimized = { path = "../guest-unoptimized" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4"
ciborium = "0.2.2"
bincode = "1.3"
ruma-lean = { path = "../../ruma-lean" }
rayon = "1.8"
ed25519-consensus = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
