[package]
name = "ruma-zk-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ruma-zk-host"
path = "main.rs"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt.git", features = ["host"] }
clap = { version = "4.4", features = ["derive"] }
ruma-zk-guest = { path = "../guest" }
ruma-zk-guest-unoptimized = { path = "../guest-unoptimized" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
hex = "0.4"
ciborium = "0.2.2"
bincode = "1.3"
ruma-lean = { git = "https://github.com/gamesguru/ruma-lean.git" }
rayon = "1.8"
ed25519-consensus = "2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
