[package]
name = "zk-matrix-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly client for verifying ZK-Matrix-Join proofs trustlessly in the browser."
repository = "https://github.com/gamesguru/matrix-zk-stark-dag-demo"
license-file = "LICENSE.txt"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
sp1-verifier = "6.0.2"
getrandom = { version = "0.2", features = ["js"] }
