[package]
name = "zk-matrix-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly client for verifying ZK-Matrix-Join proofs trustlessly in the browser."
repository = "https://github.com/gamesguru/ruma-zk"
license-file = "LICENSE.txt"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
